@@ -1,5 +1,16 @@
 2011-01-22 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/nact/base-window.c:
+	* src/nact/base-window.h:
+	Revert commits dfb26ec5, 1991b3b7 and 4d0c43bb due to new virtual method
+	handling paradigm.
+	Pass the GtkWindow toplevel as a parameter of 'base-window-initialize-gtk'
+	signal.
+	initial_load_toplevel() virtual method is renamed as initialize_gtk_toplevel().
+
+	* src/nact/nact-main-window.c:
+	No more connect to the signal, but implement the virtual method.
+
 	* src/nact/base-application.c (appli_initialize_manage_options):
 	* src/nact/base-application.h (manage_options):
 	* src/nact/nact-application.c (appli_manage_options):
